Changes from 0.2p7 to 0.2p8:
	- added a patch to work around texas instruments' IRQ bug

Changes from 0.2p6 to 0.2p7:
	- upgraded pppd's radius to send
	  'Acct-{Input,Output}-Gigawords' attributes
	- upgraded iproute2 to iproute2-051007

Changes from 0.2p5 to 0.2p6:
	- upgraded iptables from 1.2.9 to 1.3.4
	- added ipt_random module to kernel

Changes from 0.2p4 to 0.2p5:
	- pppoe-relay now sets O_NONBLOCK on fds to
	  avoid the possibility of blocking
	- patched wget to parse the PASV ftp command's
	  result correctly

Changes from 0.2p3 to 0.2p4:
	- backported a patch to vi.c from svn

Changes from 0.2p2 to 0.2p3:
	- upgraded ltraf
	- upgraded busybox to version 1.01
	- upgraded the kernel to version 2.4.32

Changes from 0.2p1 to 0.2p2:
	- modified the 'reflash' script

Changes from 0.2 to 0.2p1:
	- upgraded madwifi and added the tools

Changes from 0.2-pre1 to 0.2:
	- upgraded openssl to 0.9.7i
	- applied some cvs fixes for pppd
	- upgraded libpcap (to 0.9.4) and tcpdump (to 3.9.4)

Changes from 0.1.5 to 0.2-pre1:
	- added the ethtool package
	- upgraded the madwifi package
	- upgraded the ltraf package
	- added ifenslave
	- upgraded the kernel to 2.4.31 and grsec to 2.1.6
	- upgraded ppp to cvs version
	- added db.1.86
	- added perl-5.8.7 as package
	- upgraded uClibc to 0.9.27
	- upgraded wireless-tools to version 27
	- some modifications made to cfpkg.mk
	- added primitive package handling
	- upgraded quagga to 0.98.5
	- added bgpd to the base quagga

Changes from 0.1.5-pre2 to 0.1.5:
	- version rename

Changes from 0.1.5-pre1 to 0.1.5-pre2:
	- Version rename
	- Added some extensions from grsecurity.
	  http://www.grsecurity.net/
	- added {tcp,udp}_blackhole at /proc/sys/net/ipv4
	  to disable RST-s and ICMP errors on unbound ports
	- upgraded busybox to version 1.00
	- added libnet-1.0.2a
	- added nemesis
	- upgraded from freeswan 2.06 to openswan 2.2.0
	- upgraded the linux kernel to 2.4.29

Changes from 0.1.4 to 0.1.5-pre1:
	- added the vtun package