@@ -1117,6 +1117,7 @@ CONFIG_GRKERNSEC_PAX_NO_ACL_FLAGS=y
 # CONFIG_GRKERNSEC_IO is not set
 # CONFIG_GRKERNSEC_PROC_MEMMAP is not set
 CONFIG_GRKERNSEC_BRUTE=y
+CONFIG_GRKERNSEC_MODSTOP=y
 # CONFIG_GRKERNSEC_HIDESYM is not set
 
 #
