@@ -1,5 +1,7 @@
 Changes from 0.2p7 to 0.2p8:
 	- added a patch to work around texas instruments' IRQ bug
+	- upraded grsec to 2.1.8, and re-ported the random
+	  IP ID, TCP ISN, RPC XID patches from grsec 2.1.1
 
 Changes from 0.2p6 to 0.2p7:
 	- upgraded pppd's radius to send
